--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "three": "^0.171.0"
+    "three": "^0.171.0",
+    "three-mesh-bvh": "^0.8.3"
   },
   "devDependencies": {
     "typescript": "~5.6.2",
