--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,6 @@ jobs:
       - run: npm ci
       - run: npm run build
       - run: |
-          git add -Af build/*/.*
+          git add -Af dist/*/.*
           git commit -m "Update production"
-          git push origin `git subtree split --prefix build main`:production --force
+          git push origin `git subtree split --prefix dist main`:production --force
