--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "three": "^0.171.0",
-    "three-mesh-bvh": "^0.8.3"
+    "three": "^0.171.0"
   },
   "devDependencies": {
     "typescript": "~5.6.2",
